2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/perl: be more portable to older perl versions
	* lib/tap-driver.pl (trap_perl_warnings_and_errors): Do not use
	the three-args version of the `open' builtin, it is not well
	supported by older perl versions (at least perl 5.6.2).
	(start): Add a no-op statement to pacify a "possible typo ... used
	only once" perl warning.

2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/perl: be more portable to older TAP::Parser versions
	* lib/tap-driver.pl (start): Do not call the `ignore_exit' method
	on our TAP parser: it is not supported in older TAP::Parser
	versions (e.g., 3.10), and is not really required by our usage of
	the parser object.

2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious Cygwin failure of a test on TAP support
	* tests/tap-bad-prog.tap (noexec.test): Add forgotten `echo'.
	When trying to run it, redirect its output to /dev/null, to
	avoid confusing automake's testsuite own TAP driver.

2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: fix glitch in TAP version of `warn_' function
	* tests/tap-functions.sh (warn_): Do not display the warning
	message two times.

2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix another spurious failure due to ignored signals
	* tests/tap-signal.test: Renamed ...
	* tests/tap-signal.tap: ... to this, converted to the use of the
	TAP protocol, and improved not to try to use/trap signals that
	are ignored by the parent shell (they will be forcibly ignored
	by all the child processes too).  Extend the test a bit since we
	are at it.
	* tests/list-of-tests.mk: Update.

2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix a spurious failure due to lacking Fortran compilers
	* tests/silent-many-generic.test (configure.in): Cause the test
	to be skipped if `configure' fails to find working C++, Fortran
	and Fortran 77 compilers.
