@@ -1,5 +1,14 @@
 2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: avoid spurious failure due to bug in older TAP::Parser
+	Older TAP::Parser versions (e.g., 3.10) erroneously convert a test
+	number `0' into `1'; do not let this bug cause a spurious failure
+	in our testsuite.
+	* tests/tap-test-number-0.test: Skip if the aforementioned
+	TAP::Parser bug is detected.
+
+2011-09-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tap/perl: be more portable to older perl versions
 	* lib/tap-driver.pl (trap_perl_warnings_and_errors): Do not use
 	the three-args version of the `open' builtin, it is not well
